[metadata]
name = utils
version = 0.1
author = jizhongxian
author_email = jizhongxian@baidu.com
description = 个人开发中常用到的一些工具函数
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src